--- a/clg/src/main/resources/application.properties
+++ b/clg/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password = Priya@11
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.security.user.name=user
+spring.security.user.password=123
+server.port=5001
